--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <nav>
       <ul>
         <li><a href="http://laboratoria.la/" target="_blank">Inicio</a></li>
-        <li><a href="#" target="_blank">Sobre mí</a></li>
-        <li><a href="#" target="_blank">Portafolio</a></li>
-        <li><a href="#" target="_blank">Contacto</a></li>
-        <li><a href="#" target="_blank">Noticias</a></li>
+        <li><a href="https://www.facebook.com/jessica.manturanopaucar" target="_blank">Sobre mí</a></li>
+        <li><a href="https://github.com/JessicaMP" target="_blank">Portafolio</a></li>
+        <li><a href="https://jessica95.mp@gmail.com" target="_blank">Contacto</a></li>
+        <li><a href="https://elcomercio.pe/" target="_blank">Noticias</a></li>
       </ul>
     </nav>
   </body>
